# Product_Fast_Api

./: .env.example  .gitignore  README.md  main.py  models.py  pyproject.toml
models/: products.py
static/: home.html  style.css
tests/: test_api.py
utils/: __init__.py  exceptions.py  valdidators.py
