[project]
name = "api-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "httpx>=0.24.0",
    "uvicorn>=0.40.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
